@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.37.2.4 2000/08/06 21:17:38 thorpej Exp $
+#	$NetBSD: Makefile,v 1.37.2.5 2002/09/11 00:07:39 itojun Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/4/93
 
 .include <bsd.own.mk>
@@ -10,7 +10,7 @@ SUBDIR=	atrun comsat fingerd ftpd getNAME getty identd ld.aout_so \
 
 .if (${MKCRYPTO} != "no")
 # Heimdal/KTH Kerberos
-SUBDIR+= hpropd kadmind kfd kpasswdd
+SUBDIR+= hpropd kadmind kpasswdd
 .endif
 
 .include <bsd.subdir.mk>
