@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.109.2.4 2000/09/29 05:43:36 thorpej Exp $
+#	$NetBSD: Makefile,v 1.109.2.5 2002/09/11 00:07:40 itojun Exp $
 #	from: @(#)Makefile	8.3 (Berkeley) 1/7/94
 
 .include <bsd.own.mk>
@@ -28,7 +28,7 @@ SUBDIR=	apply apropos asa at audio banner basename biff \
 
 .if (${MKCRYPTO} != "no")
 SUBDIR+= openssl
-SUBDIR+= bdes compile_et kdestroy kf kinit klist kpasswd mk_cmds string2key
+SUBDIR+= bdes compile_et kdestroy kinit klist kpasswd mk_cmds string2key
 SUBDIR+= ssh
 .endif
 
